# ml-cookie-cutter

./: .gitignore  LICENSE  Makefile  README.md  dagster.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: linting.yml  testing.yml
data/raw/timeseries-example/: config.yaml
docs/assets/: ml-cookie-cutter.excalidraw
infrastructure/: Dockerfile.mlflow  docker-compose.yml  test_mlflow_store.py
ml_cookie_cutter/: cli.py  projects.py
ml_cookie_cutter/data/: __init__.py  base.py  constants.py  factories.py  loaders.py  raw.py
ml_cookie_cutter/data/dagster/: __init__.py  io_managers.py  timeseries_example.py
ml_cookie_cutter/data/notebooks/: timeseries-example.py  timeseries_example.py
ml_cookie_cutter/data/notebooks/sandbox/: pyro_lin_reg.py
ml_cookie_cutter/ml/: timeseries_neptune.py
ml_cookie_cutter/orchestration/: __init__.py  definitions.py  io_managers.py  timeseries_example.py
tests/data/: test_dagster.py  test_datasets.py  test_ops.py
