[tool.poetry]
name = "ml-cookie-cutter"
version = "0.1.0"
description = ""
authors = ["Jakob Thrane <jakobthrane@gmail.com>"]
readme = "README.md"

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
duckdb = "^0.9.1"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.4"
pyright = "^1.1.334"
pylint = "^3.0.2"

[tool.dagster]
module_name = "ml_cookie_cutter.data.dagster"


[tool.poetry.scripts]
ml = "ml_cookie_cutter.cli:app"




[tool.poetry.group.data.dependencies]
pandas = "<2.1.2"
polars = "^0.19.12"
dbt-postgres = "^1.7.0"
dagster = "^1.5.6"
dagster-webserver = "^1.5.6"
dagster-duckdb = "^0.21.6"
dagster-duckdb-pandas = "^0.21.6"
jupytext = "^1.15.2"
pyarrow = "^14.0.0"
ipykernel = "^6.26.0"
plotly = "^5.18.0"
matplotlib = "^3.8.1"
dagster-duckdb-polars = "^0.21.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
