[tool.poetry]
name = "ml-cookie-cutter"
version = "0.1.0"
description = ""
authors = ["Jakob Thrane <jakobthrane@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
duckdb = "^0.9.1"
typer = "^0.9.0"
rich = "^13.6.0"
semantic-version = "^2.10.0"
scikit-learn = "^1.3.2"
neptune = "^1.8.5"

[tool.poetry.group.linting.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
pyright = "^1.1.336"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.timeseries.dependencies]
torch = {version = "^2.1.1+cpu", source = "pytorch"}
torchvision = {version = "^0.16.1+cpu", source = "pytorch"}
pyro-ppl = {version = "^1.8.6"}

[tool.dagster]
module_name = "ml_cookie_cutter.dagster"

[tool.poetry.extras]
torch = ["torch", "torchvision", "pyro-ppl"]

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    "B",
    # Isort
    "I",
]
line-length = 120


[tool.poetry.scripts]
ml = "ml_cookie_cutter.cli:app"

[tool.poetry.group.data.dependencies]
pandas = "<2.1.2"
polars = "^0.19.12"
dagster = "^1.5.6"
dagster-webserver = "^1.5.6"
dagster-duckdb = "^0.21.6"
dagster-duckdb-pandas = "^0.21.6"
jupytext = "^1.15.2"
pyarrow = "^14.0.0"
ipykernel = "^6.26.0"
plotly = "^5.18.0"
matplotlib = "^3.8.1"
dagster-duckdb-polars = "^0.21.6"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
